# Task-Manager

./: .gitignore  CMakeLists.txt  README.md
docs/Meeting 1/: Meeting_1_Minutes-02_11_2025.excalidraw
docs/Meeting 2/: GitGuide.md  Meeting_2_Minutes-15_11_2025.md
docs/Other/: Data Management.excalidraw  Design Document.docx  Manual for the Task Management System.docx  Notes.md  ~$nual for the Task Management System.docx  ~$sign Document.docx
include/: data.h  include.h  task.h  taskData.h  tasks_file.h  ui.h  user.h  userData.h
src/: .null-ls_814785_ui.cpp  data.cpp  main  main.cpp  task.cpp  task.h  taskData.cpp  ui.cpp  user.cpp  user.h  userData.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
